--- a/investix/account-programs/account.html
+++ b/investix/account-programs/account.html
@@ -39,10 +39,10 @@
                 <li><a href="ultimate.html">Ultimate Program</a></li>
               </ul>
             </li>
-            <li><a href="#">Education</a></li>
+            <!-- <li><a href="#">Education</a></li>
             <li><a href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Contacts</a></li> -->
             <!-- <li> -->
               <!-- select -->
             <!-- </li> -->
@@ -81,7 +81,7 @@
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's BASIC program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Investix's BASIC program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
               <div class="account__flex  account__flex--edge">
@@ -121,7 +121,7 @@
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's ADVANCED program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Investix's ADVANCED program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
               <div class="account__flex  account__flex--edge">
@@ -161,7 +161,7 @@
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's EXPERT program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Investix's EXPERT program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
               <div class="account__flex  account__flex--edge">
@@ -201,7 +201,7 @@
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's PRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Investix's PRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
               <div class="account__flex  account__flex--edge">
@@ -241,7 +241,7 @@
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's ULTIMATE program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Investix's ULTIMATE program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
               <div class="account__flex  account__flex--edge">
@@ -554,7 +554,7 @@
         <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
       </a>
       <div class="footer__flex">
-        <ul class="footer__list">
+        <!-- <ul class="footer__list">
           <li><b>Education</b></li>
           <li><a href="#">Self Study Course</a></li>
           <li><a href="#">Star Trader Course</a></li>
@@ -563,7 +563,7 @@
           <li><a href="#">Forex, Commodities & EU</a></li>
           <li><a href="#">Markets Course</a></li>
           <li><a href="#">Free Day Trading Course!</a></li>
-        </ul>
+        </ul> -->
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
           <li><a href="basic.html">Basic Program</a></li>
@@ -572,7 +572,7 @@
           <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
         </ul>
-        <ul class="footer__list">
+        <!-- <ul class="footer__list">
           <li><b>About</b></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">About Meir Barak</a></li>
@@ -580,33 +580,33 @@
           <li><a href="#">Partners</a></li>
           <li><a href="#">Refer A Friend</a></li>
           <li><a href="#">Contact Us</a></li>
-        </ul>
+        </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442036420372">+44-20-36420372</a></li>
-          <li><a class="footer__email" href="mailto:info@tradenet.com">info@tradenet.com</a></li>
-          <li><a class="footer__home" href="https://www.tradenet.com">www.tradenet.com</a></li>
-          <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li>
+          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
+          <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
+          <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
         </ul>
       </div>
     </div>
     <hr class="footer__hr">
     <div class="container">
-      <p class="footer__text">Tradenet is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Tradenet, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our account have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
-      <p class="footer__text">All purchases are made exclusively to the merchant Tradenet for educational account. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Tradenet as it is completely independent from Tradenet’s educational account and relevant package pricing.</p>
+      <p class="footer__text">Investix is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Investix, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our account have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
+      <p class="footer__text">All purchases are made exclusively to the merchant Investix for educational account. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Investix as it is completely independent from Investix’s educational account and relevant package pricing.</p>
     </div>
     <div class="footer__copyright">
       <div class="container">
         <div class="footer__inner">
           <p class="footer__copy">© 2018 All rights reserved</p>
-          <ul class="footer__rules">
+          <!-- <ul class="footer__rules">
             <li><a href="#">Terms of Use</a></li>
             <li>|</li>
             <li><a href="#">Privacy Policy</a></li>
             <li class="footer__up">
               <button type="button"></button>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
