--- a/investix/index.html
+++ b/investix/index.html
@@ -40,10 +40,10 @@
                 <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
               </ul>
             </li>
-            <li><a href="#">Education</a></li>
+            <!-- <li><a href="#">Education</a></li>
             <li><a class="nav__chat" href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Contacts</a></li> -->
             <!-- <li> -->
               <!-- select -->
             <!-- </li> -->
@@ -75,7 +75,7 @@
         <div class="info__box">
           <h1 class="info__title">Traders education at our<br>live trading academy</h1>
           <p class="info__text">Enjoy extra income, and gain financial security by learning this great profession in our Day Trading Academy.</p>
-          <p class="info__text">Since 2004, Tradenet live day trading academy has educated more than 30,000 professional traders worldwide.</p>
+          <p class="info__text">Since 2004, Investix live day trading academy has educated more than 30,000 professional traders worldwide.</p>
           <p class="info__text">You are welcome to select between our basic and advanced courses, or combine them in our world renowned Mentorship Program.</p>
           <a class="button  button--small  button--green  info__button" href="#">Get Started</a>
         </div>
@@ -93,7 +93,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/basic.html">Read More</a>
         </div>
         <div class="services__box  services__box--advanced">
           <p class="services__name">
@@ -101,7 +101,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/advanced.html">Read More</a>
         </div>
         <div class="services__box  services__box--expert">
           <p class="services__name">
@@ -109,7 +109,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/expert.html">Read More</a>
         </div>
         <div class="services__box  services__box--pro">
           <p class="services__name">
@@ -117,7 +117,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/pro.html">Read More</a>
         </div>
         <div class="services__box  services__box--ultimate">
           <p class="services__name">
@@ -125,7 +125,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/ultimate.html">Read More</a>
         </div>
       </div>
     </div>
@@ -418,7 +418,7 @@
     <div class="container">
       <img class="footer__logo" src="img/logo-white.svg" alt="Investix">
       <div class="footer__flex">
-        <ul class="footer__list">
+        <!-- <ul class="footer__list">
           <li><b>Education</b></li>
           <li><a href="#">Self Study Course</a></li>
           <li><a href="#">Star Trader Course</a></li>
@@ -427,7 +427,7 @@
           <li><a href="#">Forex, Commodities & EU</a></li>
           <li><a href="#">Markets Course</a></li>
           <li><a href="#">Free Day Trading Course!</a></li>
-        </ul>
+        </ul> -->
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
           <li><a href="account-programs/basic.html">Basic Program</a></li>
@@ -436,7 +436,7 @@
           <li><a href="account-programs/pro.html">Pro Program</a></li>
           <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
         </ul>
-        <ul class="footer__list">
+        <!-- <ul class="footer__list">
           <li><b>About</b></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">About Meir Barak</a></li>
@@ -444,33 +444,33 @@
           <li><a href="#">Partners</a></li>
           <li><a href="#">Refer A Friend</a></li>
           <li><a href="#">Contact Us</a></li>
-        </ul>
+        </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442036420372">+44-20-36420372</a></li>
-          <li><a class="footer__email" href="mailto:info@tradenet.com">info@tradenet.com</a></li>
-          <li><a class="footer__home" href="https://www.tradenet.com">www.tradenet.com</a></li>
-          <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li>
+          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
+          <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
+          <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
         </ul>
       </div>
     </div>
     <hr class="footer__hr">
     <div class="container">
-      <p class="footer__text">Tradenet is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Tradenet, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
-      <p class="footer__text">All purchases are made exclusively to the merchant Tradenet for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Tradenet as it is completely independent from Tradenet’s educational services and relevant package pricing.</p>
+      <p class="footer__text">Investix is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Investix, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
+      <p class="footer__text">All purchases are made exclusively to the merchant Investix for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Investix as it is completely independent from Investix’s educational services and relevant package pricing.</p>
     </div>
     <div class="footer__copyright">
       <div class="container">
         <div class="footer__inner">
           <p class="footer__copy">© 2018 All rights reserved</p>
-          <ul class="footer__rules">
+          <!-- <ul class="footer__rules">
             <li><a href="#">Terms of Use</a></li>
             <li>|</li>
             <li><a href="#">Privacy Policy</a></li>
             <li class="footer__up">
               <button type="button"></button>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
