--- a/investix/account-programs/expert.html
+++ b/investix/account-programs/expert.html
@@ -39,18 +39,10 @@
                 <li><a href="ultimate.html">Ultimate Program</a></li>
               </ul>
             </li>
-            <li>
-              <a href="#">Education</a>
-              <ul class="nav__sublist">
-                <li><a href="#">Intro Program</a></li>
-                <li><a href="#">Student Program</a></li>
-                <li><a href="#">Expert Program</a></li>
-                <li><a href="#">Pro Program</a></li>
-              </ul>
-            </li>
+            <!-- <li><a href="#">Education</a></li>
             <li><a href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Contacts</a></li> -->
             <!-- <li> -->
               <!-- select -->
             <!-- </li> -->
@@ -111,9 +103,6 @@
           </div>
         </div>
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management<br>Tools</b>
-          </div>
           <div class="account-programs__box  account-programs__box--session">
             <b>Weekly Group<br>Mentoring Sessions</b>
           </div>
@@ -122,6 +111,9 @@
           </div>
           <div class="account-programs__box  account-programs__box--signal">
             <b>Daily Signals</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--signal">
+            <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
           </div>
         </div>
       </div>
@@ -461,7 +453,7 @@
         <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
       </a>
       <div class="footer__flex">
-        <ul class="footer__list">
+        <!-- <ul class="footer__list">
           <li><b>Education</b></li>
           <li><a href="#">Self Study Course</a></li>
           <li><a href="#">Star Trader Course</a></li>
@@ -470,7 +462,7 @@
           <li><a href="#">Forex, Commodities & EU</a></li>
           <li><a href="#">Markets Course</a></li>
           <li><a href="#">Free Day Trading Course!</a></li>
-        </ul>
+        </ul> -->
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
           <li><a href="basic.html">Basic Program</a></li>
@@ -479,7 +471,7 @@
           <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
         </ul>
-        <ul class="footer__list">
+        <!-- <ul class="footer__list">
           <li><b>About</b></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">About Meir Barak</a></li>
@@ -487,33 +479,33 @@
           <li><a href="#">Partners</a></li>
           <li><a href="#">Refer A Friend</a></li>
           <li><a href="#">Contact Us</a></li>
-        </ul>
+        </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442036420372">+44-20-36420372</a></li>
-          <li><a class="footer__email" href="mailto:info@tradenet.com">info@tradenet.com</a></li>
-          <li><a class="footer__home" href="https://www.tradenet.com">www.tradenet.com</a></li>
-          <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li>
+          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
+          <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
+          <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
         </ul>
       </div>
     </div>
     <hr class="footer__hr">
     <div class="container">
-      <p class="footer__text">Tradenet is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Tradenet, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
-      <p class="footer__text">All purchases are made exclusively to the merchant Tradenet for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Tradenet as it is completely independent from Tradenet’s educational services and relevant package pricing.</p>
+      <p class="footer__text">Investix is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Investix, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
+      <p class="footer__text">All purchases are made exclusively to the merchant Investix for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Investix as it is completely independent from Investix’s educational services and relevant package pricing.</p>
     </div>
     <div class="footer__copyright">
       <div class="container">
         <div class="footer__inner">
           <p class="footer__copy">© 2018 All rights reserved</p>
-          <ul class="footer__rules">
+          <!-- <ul class="footer__rules">
             <li><a href="#">Terms of Use</a></li>
             <li>|</li>
             <li><a href="#">Privacy Policy</a></li>
             <li class="footer__up">
               <button type="button"></button>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
