--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -99,7 +99,7 @@
             <b>Technical Analysis -<br>The Basic + Advanced</b>
           </div>
           <div class="account-programs__box  account-programs__box--online">
-            <b>Learn Online<br>Advanced Strategies</b>
+            <b>Learn Advanced<br>Trading Strategies</b>
           </div>
         </div>
         <div class="account-programs__flex  account-programs__flex--around">
