--- a/investix/account-programs/ultimate.html
+++ b/investix/account-programs/ultimate.html
@@ -116,7 +116,7 @@
             <b>Daily Signals</b>
           </div>
         </div>
-        <div class="account-programs__flex  account-programs__flex--around">
+        <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--live">
             <b>Three Live 3-hours<br>Online Sessions 1:1</b>
           </div>
@@ -125,6 +125,14 @@
           </div>
           <div class="account-programs__box  account-programs__box--risk">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--risk">
+            <b>******</b>
+          </div>
+        </div>
+        <div class="account-programs__flex">
+          <div class="account-programs__box  account-programs__box--risk">
+            <b>******</b>
           </div>
         </div>
       </div>
