--- a/investix/account-programs/ultimate.html
+++ b/investix/account-programs/ultimate.html
@@ -487,8 +487,8 @@
           <li><a href="basic.html">Basic Program</a></li>
           <li><a href="advanced.html">Advanced Program</a></li>
           <li><a href="expert.html">Expert Program</a></li>
-          <li><a class="footer__active">Pro Program</a></li>
-          <li><a href="ultimate.html">Ultimate Program</a></li>
+          <li><a href="pro.html">Pro Program</a></li>
+          <li><a class="footer__active">Ultimate Program</a></li>
         </ul>
         <!-- <ul class="footer__list">
           <li><b>About</b></li>
