--- a/investix/account-programs/basic.html
+++ b/investix/account-programs/basic.html
@@ -37,6 +37,7 @@
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
+                <li><a href="crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Education</a></li>
@@ -453,6 +454,7 @@
           <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
+          <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
         <!-- <ul class="footer__list">
           <li><b>About</b></li>
@@ -465,7 +467,7 @@
         </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
           <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
