--- a/investix/account-programs/expert.html
+++ b/investix/account-programs/expert.html
@@ -37,6 +37,7 @@
                 <li><a class="nav__active">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
+                <li><a href="crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Education</a></li>
@@ -98,7 +99,7 @@
           <div class="account-programs__box  account-programs__box--analysis">
             <b>Technical Analysis -<br>Expert + Price Action</b>
           </div>
-          <div class="account-programs__box  account-programs__box--online">
+          <div class="account-programs__box  account-programs__box--learn">
             <b>Learn Advanced<br>Trading Strategies</b>
           </div>
         </div>
@@ -112,7 +113,7 @@
           <div class="account-programs__box  account-programs__box--signal">
             <b>Daily Signals</b>
           </div>
-          <div class="account-programs__box  account-programs__box--signal">
+          <div class="account-programs__box  account-programs__box--bonus">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
           </div>
         </div>
@@ -470,6 +471,7 @@
           <li><a class="footer__active">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
+          <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
         <!-- <ul class="footer__list">
           <li><b>About</b></li>
@@ -482,7 +484,7 @@
         </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
           <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
