--- a/investix/account-programs/pro.html
+++ b/investix/account-programs/pro.html
@@ -37,6 +37,7 @@
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a class="nav__active">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
+                <li><a href="crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Education</a></li>
@@ -98,7 +99,7 @@
           <div class="account-programs__box  account-programs__box--analysis">
             <b>Technical Analysis (Expert) + Price Action + Turtle Trading</b>
           </div>
-          <div class="account-programs__box  account-programs__box--online">
+          <div class="account-programs__box  account-programs__box--learn">
             <b>Learn Advanced<br>Trading Strategies</b>
           </div>
         </div>
@@ -120,7 +121,7 @@
           <div class="account-programs__box  account-programs__box--pers">
             <b>Personal Mentoring</b>
           </div>
-          <div class="account-programs__box  account-programs__box--risk">
+          <div class="account-programs__box  account-programs__box--bonus">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
           </div>
         </div>
@@ -478,6 +479,7 @@
           <li><a href="expert.html">Expert Program</a></li>
           <li><a class="footer__active">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
+          <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
         <!-- <ul class="footer__list">
           <li><b>About</b></li>
@@ -490,7 +492,7 @@
         </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
           <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
