--- a/investix/account-programs/ultimate.html
+++ b/investix/account-programs/ultimate.html
@@ -37,6 +37,7 @@
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
                 <li><a class="nav__active">Ultimate Program</a></li>
+                <li><a href="crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Education</a></li>
@@ -98,14 +99,11 @@
           <div class="account-programs__box  account-programs__box--analysis">
             <b>Technical Analysis + Price Action + Turtle Trading</b>
           </div>
-          <div class="account-programs__box  account-programs__box--online">
+          <div class="account-programs__box  account-programs__box--learn">
             <b>Learn Advanced<br>Trading Strategies</b>
           </div>
         </div>
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management<br>Tools</b>
-          </div>
           <div class="account-programs__box  account-programs__box--session">
             <b>Weekly Group<br>Mentoring Sessions</b>
           </div>
@@ -115,24 +113,22 @@
           <div class="account-programs__box  account-programs__box--signal">
             <b>Daily Signals</b>
           </div>
-        </div>
-        <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--live">
             <b>Three Live 3-hours<br>Online Sessions 1:1</b>
           </div>
+        </div>
+        <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--pers">
             <b>Personal Mentoring</b>
           </div>
-          <div class="account-programs__box  account-programs__box--risk">
+          <div class="account-programs__box  account-programs__box--market">
+            <b>Market Psychology</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--fund">
+            <b>Fundamental Analysis</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--bonus">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--risk">
-            <b>******</b>
-          </div>
-        </div>
-        <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--risk">
-            <b>******</b>
           </div>
         </div>
       </div>
@@ -489,6 +485,7 @@
           <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
           <li><a class="footer__active">Ultimate Program</a></li>
+          <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
         <!-- <ul class="footer__list">
           <li><b>About</b></li>
@@ -501,7 +498,7 @@
         </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
           <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
