--- a/investix/index.html
+++ b/investix/index.html
@@ -38,6 +38,7 @@
                 <li><a href="account-programs/expert.html">Expert Program</a></li>
                 <li><a href="account-programs/pro.html">Pro Program</a></li>
                 <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
+                <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Education</a></li>
@@ -435,6 +436,7 @@
           <li><a href="account-programs/expert.html">Expert Program</a></li>
           <li><a href="account-programs/pro.html">Pro Program</a></li>
           <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
+          <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
         </ul>
         <!-- <ul class="footer__list">
           <li><b>About</b></li>
@@ -447,7 +449,7 @@
         </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
           <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
