--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -37,6 +37,7 @@
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
+                <li><a href="crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Education</a></li>
@@ -98,7 +99,7 @@
           <div class="account-programs__box  account-programs__box--analysis">
             <b>Technical Analysis -<br>The Basic + Advanced</b>
           </div>
-          <div class="account-programs__box  account-programs__box--online">
+          <div class="account-programs__box  account-programs__box--learn">
             <b>Learn Advanced<br>Trading Strategies</b>
           </div>
         </div>
@@ -106,7 +107,7 @@
           <div class="account-programs__box  account-programs__box--risk">
             <b>Risk Management<br>Tools</b>
           </div>
-          <div class="account-programs__box  account-programs__box--risk">
+          <div class="account-programs__box  account-programs__box--bonus">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
           </div>
         </div>
@@ -464,6 +465,7 @@
           <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
+          <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
         <!-- <ul class="footer__list">
           <li><b>About</b></li>
@@ -476,7 +478,7 @@
         </ul> -->
         <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li>
+          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
           <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
